[gd_scene load_steps=27 format=3 uid="uid://cavvgwt012mtl"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_dwp2h"]
[ext_resource type="Texture2D" uid="uid://bmu4sforanv17" path="res://art/sprites/characters/Blue_Hood.png" id="3_58vdf"]
[ext_resource type="Script" path="res://scenes/health_bar.gd" id="3_ktihw"]
[ext_resource type="Texture2D" uid="uid://c8bs2c5uf283o" path="res://art/sprites/UI/healthbarUnder.png" id="4_i7eyx"]
[ext_resource type="Texture2D" uid="uid://dacxifr68wgfm" path="res://art/sprites/UI/healthbarProgress.png" id="5_jgh1r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1vmcq"]
atlas = ExtResource("3_58vdf")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1k1u5"]
atlas = ExtResource("3_58vdf")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1is8j"]
atlas = ExtResource("3_58vdf")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssc5p"]
atlas = ExtResource("3_58vdf")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k62wc"]
atlas = ExtResource("3_58vdf")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7m5ts"]
atlas = ExtResource("3_58vdf")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31ql6"]
atlas = ExtResource("3_58vdf")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hby3"]
atlas = ExtResource("3_58vdf")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnmaj"]
atlas = ExtResource("3_58vdf")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry1gy"]
atlas = ExtResource("3_58vdf")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp0gu"]
atlas = ExtResource("3_58vdf")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuxm3"]
atlas = ExtResource("3_58vdf")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s3c4"]
atlas = ExtResource("3_58vdf")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmvjt"]
atlas = ExtResource("3_58vdf")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bw50"]
atlas = ExtResource("3_58vdf")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjp6p"]
atlas = ExtResource("3_58vdf")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqx1y"]
atlas = ExtResource("3_58vdf")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0vj2"]
atlas = ExtResource("3_58vdf")
region = Rect2(96, 96, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_8j30t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vmcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k1u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1is8j")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssc5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k62wc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m5ts")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31ql6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hby3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnmaj")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry1gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp0gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuxm3")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s3c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmvjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bw50")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjp6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqx1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0vj2")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hsb8y"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xod7c"]
radius = 14.0

[node name="player" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 3
script = ExtResource("1_dwp2h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -3)
sprite_frames = SubResource("SpriteFrames_8j30t")
animation = &"front_walk"
offset = Vector2(2.08165e-12, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -4)
shape = SubResource("CircleShape2D_hsb8y")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(2.08165e-12, -9)
shape = SubResource("CircleShape2D_xod7c")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="world_camera" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 564
limit_bottom = 217
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="cliffside_camera" type="Camera2D" parent="."]
limit_left = 69
limit_top = 43
limit_right = 287
limit_bottom = 222
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="dungeon_camera" type="Camera2D" parent="."]
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer" node_paths=PackedStringArray("player")]
offset_right = 40.0
offset_bottom = 40.0
texture_under = ExtResource("4_i7eyx")
texture_progress = ExtResource("5_jgh1r")
script = ExtResource("3_ktihw")
player = NodePath("../..")

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
